--- a/qos_contributors.adoc
+++ b/qos_contributors.adoc
@@ -3,5 +3,4 @@
 This RISC-V specification has been contributed to directly or indirectly by:
 
 [%hardbreaks]
-Aaron Durbin, Allen Baum, Allison Randal, Ambika Krishnamoorthy, David
-Kruckemeyer, David Weaver, Derek Hower, Eric Shiu, Greg Favor, Vedvyas Shanbhogue
+Aaron Durbin, Allen Baum, Allison Randal, Ambika Krishnamoorthy, David Kruckemeyer, David Weaver, Derek Hower, Eric Shiu, Greg Favor, Ravi Sahita, Vedvyas Shanbhogue
