--- a/qos_hw_guidelines.adoc
+++ b/qos_hw_guidelines.adoc
@@ -25,163 +25,11 @@ recommended for all resource controllers in the system to support an identical
 number of `RCID` and `MCID`.
 ====
 
-=== Confidential computing
 
-Confidential Computing protects data in use by performing computation in a
-hardware-based, attested Trusted Execution Environment (TEE). These secure and
-isolated environments prevent unauthorized access or modification of
-applications and data while in use, thereby increasing the security assurances
-for organizations that manage sensitive and regulated data.
+=== Sizing monitoring counters
 
-Typically a TEE instance is used to deploy a workload (e.g., a VM, a process,
-etc.) that requires confidential computing. 
-
-Typically, a system may hosts multiple TEEs and one TEE may not include another
-TEE in its trust boundary. Typically, such systems that host multiple TEEs
-include a TEE security manager (TSM) that is trusted by the TEEs and is the
-supervisor that establishes the security policies for TEEs and enforces these
-policies using the hardware mechanism provided by the system. The TSM itself is
-isolated from the TEEs and from other untrusted execution environments in the
-system.
-
-The resource accesses from a TEE or the TSM must not be observable using the
-resource usage monitoring extensions to entities that are not trusted by the
-TEE. The resource allocations for the TEE must not be affected by entities that
-are not trusted by the TEE.
-
-Supporting confidential computing thus requires following additional
-capabilities:
-
-* A secure register programming interface
-* A confidential-access indicator (`C`)
-
-To differentiate requests to shared resources originating from TSM/TEEs from
-non-TEEs, a confidential-access indicator (`C`) may be associated with requests
-made to the shared resources. When the request originates from the TSM or a TEE
-and is used to access a confidential resource then this indicator may be 1 and
-when the request originates from other untrusted execution environments the
-indicator may be set to 0.
-
-==== Secure register programming interface
-
-To support confidential computing a CBQRI capable controller must provide a
-second register programming interface that is memory mapped (similar to the
-normal register programming interface) that is used to establish resource
-allocations and resource usage monitoring for secure execution. The secure
-register programming interface has the same register layout and behavior defined
-as specified in this specification.
-
-Access to the memory mapped secure register programming interfaces should be
-restricted to the TSM (e.g., secure M-mode) using mechanisms such as the PMP.
-
-The resource controllers that support confidential computing thus support:
-
-*  Two set of resource allocation configurations - confidential and 
-   non-confidential - for each `RCID` and `AT`. The confidential resource
-   allocation configurations may on only be accesssed through the secure
-   register programming interface.
-
-* Two set of resource usage monitoring events and counters - confidential and
-  non-confidential - for each `MCID` and `AT`. The confidential monitoring
-  events and counters may on only be accesssed through the secure register
-  programming interface.
-
-[NOTE]
-====
-An implementation may restrict number of `RCID` and `MCID` that may be used for
-confidential computing and thereby implement a smaller number of entries in the
-configuration tables programmed through the secure register programming
-interface.
-====
-
-[NOTE]
-====
-To support maximal flexibility in allocation of QoS IDs to TEEs it is
-recommended for all resource controllers in the system to support an identical
-number of `RCID` and `MCID` that may be associated with TEEs.
-====
-
-==== Confidential-access indication
-
-When confidential computing is supported, requests to resource controllers are
-associated with a confidential-access indicator (`C`).
-
-The `C` bit associated with the request indicates whether the access is to a
-confidential resources (`C=1`) or to a non-confidential resource. For example,
-when accessing a memory region, the `C` bit may be determined as a property of
-the memory region. When the memory region is associated with a TEE then the `C`
-bit for requests to such memory regions is 1 and is 0 otherwise.
-
-Execution in a TEE/TSM may generate requests associated with both settings of
-`C` bit. For example, when a TEE accesses its confidential memory the `C` bit
-associated with such requests will be 1 and when the TEE accesses
-non-confidential memory (e.g., memory buffers used by the TEE for communication
-with agents outside the TEE) then the `C` bit associated the request will be 0.
-
-Execution in a non-TEE may only make requests with `C=0` as access to
-confidential resources is restricted to TEEs.
-
-For requests with `C=1`:
-
-* The resource controllers Use the confidential resource allocation
-  configurations that were established using the secure register programming
-  interface for the associated `RCID` and `AT`.
-* The monitoring events programmed through the secure register programming
-  interface for the associated `MCID` and `AT` are triggered and are counted in
-  monitoring counters that may only be accessed using the secure register
-  programming interface.
-
-For requests with `C=0`:
-
-* The resource controllers use the configurations that were established using
-  the non-secure register programming interface for the associated `RCID` and
-  `AT`.
-
-* The monitoring events programmed through the non-secure register programming
-  interface for the associated `MCID` and `AT` are triggered and are counted in
-  monitoring counters that may only be accessed using the non-secure register
-  programming interface.
-
-[NOTE]
-====
-The confidential-access indicator may be determined at the originator of the
-request and thus be carried along with the request or may be determined at the
-resource controller itself based on the properties of the address space
-accessed.
-====
-
-[NOTE]
-====
-
-The following table is an example of a bandwidth controller that supports
-confidential computing and two MCIDs for bandwidth monitoring. The controller
-in this example implements 4 counters; two for each MCID with one counter used
-to count confidential requests and one to count non-confidential requests. 
-
-[width=100%]
-[%header, cols="3,^7,^7,^3,^3"]
-|===
-|          |  `C=0` configuration | `C=1` configuration | `C=0` counter | `C=1` counter
-| `MCID=0` | `EVT_ID=1`, `ATV=0`  | `EVT_ID=3`, `ATV=0` | `192`         | `384`
-| `MCID=1` | `EVT_ID=3`, `ATV=0`  | `EVT_ID=0`, `ATV=0` | `512`         | `0`
-|===
-
-In this example, the `MCID` of value 0 is configured to count "Total Read and Write
-byte count" for non-confidential requests with `AT=0` and has been configured to
-count "Total write byte count" for confidential requests with any `AT`. The
-configurations to use for confidential requests were setup through the secure
-register programming interface and those for non-confidential requester using
-the regular register programming interface.
-
-
-Further, in this example, the confidential counter for `MCID=0` has a value of
-`384` and is the value that would be returned if the counter value for `MCID=0` is
-read using the secure register programming interface.
-
-Further, in this example, the non-confidential counter for `MCID=0` has a value of
-`384` and is the value that would be returned if the counter value for `MCID=0` is
-read using the regular register programming interface.
-
-====
-
+Typically software samples the monitoring counters periodically to monitor
+capacity and bandwidth usage. The width of the monitoring counters is is
+recommended to be wide enough to not cause more than one overflow per sample
+when sampled at a frequency of 1 Hz.
 
