--- a/qos_sw_guidelines.adoc
+++ b/qos_sw_guidelines.adoc
@@ -1,19 +1,51 @@
 [[QOS_SW_GUIDE]]
 == Software Guidelines
 
+=== Reporting capacity and bandwidth controllers
+
+The capability and bandwidth controllers that are present in the system should
+be reported to operating systems using methods such as ACPI and/or device tree.
+For each capacity and bandwidth controller, the following information should be
+reported using these methods:
+
+* Type of controller (e.g, cache, interconnect, memory, etc.)
+* Location of the register programming interface for the controller
+* Placement and topology describing the hart and IO bridges that share the
+  resources controlled by the controller
+* The number QoS identifiers supported by the controller
+
 === Context switching QoS Identifiers
 
-Typically, the contents of the `sqoscfg` CSR is updated with a new `RCID`
+Typically, the contents of the `sqoscfg` CSR are updated with a new `RCID`
 and/or `MCID` by the HS/S-mode scheduler if the `RCID` and/or `MCID` of the
-new process/VM is not same as that of the old process/VM.
+new workload (a process or a VM) is not same as that of the old workload.
+
+A context switch usually involves saving the context associated with the
+workload being switched away from and restoring the context of the workload
+being switched to. Such context switch may be invoked in response to an explicit
+call from the workload (i.e, as a function of an `ECALL` invocation) or may be
+done asynchronously (e.g., in response to a timer interrupt). In such cases the
+scheduler may want to execute with the `sqoscfg` configurations of the
+workload being switched away from such that this execution is attributed to the
+workload being switched away from and then prior to restoring the new workloads
+context, first switch to the `sqoscfg` configurations appropriate for the
+workload being switched to such that all of that execution is attributed to
+the new workload. Further in this context switch process, if the scheduler
+intends some of its execution to be attributed to neither the outgoing
+workload nor the incoming workload, then the scheduler may switch to a new
+`sqoscfg` configuration that is different from that of either of the workloads
+for the duration of such execution.
+
+=== QoS configurations for virtual machines
 
 Usually for virtual machines the resource allocations are configured by the
 hypervisor. Usually the Guest OS in a virtual machine does not participate in
 the QoS flows as the Guest OS does not know the physical capabilities of the
 platform or the resource allocations for other virtual machines in the system.
+
 If a use case requires it, a hypervisor may virtualize the QoS capability to a
-VM by virtualizing the memory-mapped CBQRI register interface and using the
-virtual-instruction exception on access to `sqoscfg` CSR.
+VM by virtualizing the memory-mapped CBQRI register interface and virtualizing
+the virtual-instruction exception on access to `sqoscfg` CSR by the Guest OS.
 
 [NOTE]
 ====
@@ -25,26 +57,6 @@ used as a selector for a set of `RCID`/`MCID` that the hypervisor configures in
 a set of HS mode CSRs.
 ====
 
-A Hypervisor may cause a context switch from one virtual machine to another. The
-context switch usually involves saving the context associated with the VM being
-switched away from and restoring the context of the VM being switched to. Such
-context switch may be invoked in response to an explicit call from the VM (i.e,
-as a function of an `ECALL` invocation) or may be done asynchronously (e.g., in
-response to a timer interrupt). In such cases the hypervisor may want to execute
-with the `sqoscfg` configurations of the VM being switched away from such that
-the execution is attributed to the VM being switched from and then prior to
-executing the context switch code associated with restoring the new VMs context
-first switch to the `sqoscfg` appropriate for the new VM being switched to such
-that all of that execution is attributed to the new VM. Further in this context
-switch process, if the hypervisor intends some of the execution to be attributed
-to neither the outgoing VM nor the incoming VM, then the hypervisor may switch
-to a new configuration that is different from the configuration of either of the
-VMs for the duration of such execution. QoS extensions are statistical in
-nature and the small duration, such as the few instructions in the hypervisor
-trap handler entrypoint, for which the HS-mode may execute with the `RCID`/
-`MCID` established for lower privilege mode operation may not be statistically
-significant.
-
 === QoS Identifiers for supervisor and machine mode
 
 The `RCID` and `MCID` configured in `sqoscfg` also apply to execution in
@@ -53,27 +65,16 @@ provide services, such as through the SBI, to software executing at lower
 privilege. Since the S/HS-mode invocation was to provide a service for the
 lower privilege mode, the S/HS-mode software may not modify the `sqoscfg` CSR.
 
-If a use case requires use of separate `RCID` and/or `MCID` for software
-execution in S/HS-mode, then the S/HS-mode SW may update the `sqoscfg` CSR and
-restore it prior to returning to the lower privilege mode execution.
-
 The `RCID` and `MCID` configured in `sqoscfg` also apply to execution in M-mode
 but is typically not an issue. Usually, M-mode execution occurs to provide
 services, such as through the SBI interface, to software executing at lower
 privilege. Since the M-mode invocation was to provide a service for the lower
-privilege mode, the M-mode software may not modify the `sqoscfg` CSR. If a use
-case requires use of a separate `RCID` and/or `MCID` for software execution in
-M-mode, then the M-mode SW may update the `sqoscfg` CSR and restore it prior to
-returning to lower privilege mode execution.
+privilege mode, the M-mode software may not modify the `sqoscfg` CSR.
 
-=== Secure register programming interface
-
-The TEE Security Manager (TSM) must control and protect the secure register
-programming interface from read or write access by non-secure entities. Methods
-such as PMPs, page tables, etc. may be employed to implementation such
-protection mechanisms.
-
-The TSM must not in general provide QoS information about one TEE to
-another or allow one TEE to affect the QoS configurations of another TEE;
-unless an explicit security policy defined by the TSM allows such sharing.
-
+If a use case requires use of separate `RCID` and/or `MCID` for software
+execution in S/HS-mode or in M-mode, then the M/S/HS-mode SW may update the
+`sqoscfg` CSR and restore it prior to returning to the lower privilege mode
+execution. QoS extensions are statistical in nature and the small duration, such
+as the few instructions in the M/S/HW-mode trap handler entrypoint, for which
+the trap handler may execute with the `RCID`/ `MCID` established for lower
+privilege mode operation may not be statistically significant.
