--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -67,7 +67,7 @@ multiples of a bandwidth block and thereby support proportional allocation of
 bandwidth.
 
 Bandwidth controllers may limit the maximum bandwidth that may be reserved to
-to be smaller than `NBWBLLKS`. The `MRBWB` field reports the maximum banwidth
+be smaller than `NBWBLLKS`. The `MRBWB` field reports the maximum bandwidth
 blocks that may be reserved.
 
 [NOTE]
@@ -232,7 +232,7 @@ A counter may be marked as `INVALID` if the controller has not been able to
 establish an accurate counter value for the monitored event.
 ====
 
-The counter provides the byte transferred by requests matching the `EVT_ID` as
+The counter provides the bytes transferred by requests matching the `EVT_ID` as
 the requests go past the monitoring point. A bandwidth value may be determined
 by reading the byte count value at two instances of time `T1` and `T2`. If the
 value of the counter at time `T1` was `B1` and at time `T2` is `B2` then the
@@ -392,7 +392,7 @@ controller may use the parameter configured for any of the access-types but the
 behavior is otherwise well defined.
 
 When the weight is not 0, the share of unused bandwidth made available to
-`RCID=x` when it contents with another `RCID` that is also allowed to use unused
+`RCID=x` when it contends with another `RCID` that is also allowed to use unused
 bandwidth is determined by the `Mweight` of `RCID=x` divided by the sum of
 `Mweight` of all other contending `RCID`. This ratio `P` is as follows:
 
