--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -88,8 +88,8 @@ a shim is `UNSPECIFIED`.
 
 If the system supports an IOMMU, then the IOMMU may be configured with the
 `RCID` and `MCID` to associate requests from the device with QoS identifiers.
-The RISC-V IOMMU extension to support configuring QoS identifiers is specified
-in <<QOS_IOMMU>>.
+The RISC-V IOMMU cite:[IOMMU] extension to support configuring QoS identifiers
+is specified in <<QOS_IOMMU>>.
 
 === Access-type (`AT`)
 
