--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -19,7 +19,11 @@ the resource controllers that control accesses to such shared resources.
 
 === Associating `RCID` and `MCID` with requests
 
-==== RISC-V hart initiated requests
+==== RISC-V hart initiated requests (Ssqosid)
+
+The Ssqosid extension, introduces a read/write S/HS-mode register (`sqoscfg`) to
+configure QoS Identifiers to be used with requests made by the hart to shared
+resources.
 
 The `sqoscfg` CSR is a 32-bit S/HS-mode read/write register to configure a
 resource control ID (`RCID`) and a monitoring counter ID (`MCID`). The `RCID`
